--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,24 +1,30 @@
 #hype-btn {
-  display: inline-block;
-  text-align: center;
-  line-height: 30px;
-
-  color: white;
-  background: #F89D33;
-  border-radius: 50%;
-  width: 125px;
-  border: 2px solid #F89D33;
-  padding: 30px;
-  transition: background 0.3s ease;
-  letter-spacing: 3px;
-  font-size: 18px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+    display: inline-block;
+    text-align: center;
+    line-height: 30px;
+    color: white;
+    background: white;
+    border-radius: 50%;
+    position: relative;
+    margin: 10px;
+    width: 125px;
+    // border: 2px solid #848484;
+    padding: 30px;
+    transition: background 0.3s ease;
+    letter-spacing: 3px;
+    font-size: 18px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: auto;
+    font-size: 80px;
 }
 #hype-btn:hover {
   text-decoration: none;
   color: white;
   box-shadow: inset 0 0 10px #000000;
-  font-size: 17px;
 }
 // border-radius: 20em;
 // text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
