--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -3,7 +3,7 @@
   color: #C6C5B9;
   font-size: 12px;
   font-weight: lighter;
-  height: 150px;
+  height: 120px;
   width: 100%;
   padding: 30px 0 10px 0;
   display: flex;
@@ -48,15 +48,14 @@
 @media (max-width: 480px) {
   .footer {
     flex-direction: row;
-    justify-content: space-between;
-    padding: 30px;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0;
   }
   .footer-icons li {
-    padding: 10px 10px 0 10px;
+    padding: 0 10px;
   }
-  .footer-child {
-    padding: 15px 0;
-  }
+
   .footer-copyright {
   font-size: 5px;
 }
