--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,7 +1,6 @@
 /* Main class */
 .navbar-hype {
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: transparent;
   transition: all 0.3s ease;
   display: flex;
   height: 70px;
@@ -9,28 +8,11 @@
   align-items: center;
   justify-content: space-between;
 }
-.navbar-hype-black {
-  background: #040F0F;
-  border-bottom-color: #EEEEEE;
-  margin-bottom: 50px;
-}
-.navbar-hype-button-black {
-  margin-left: 10px;
-  padding: 0 20px;
-  border-radius: 20em;
-  line-height: 40px;
-  background: #040F0F;
-  color: #EEEEEE;
-  font-size: 12px;
-  letter-spacing: 3px;
-  border: 2px solid #EEEEEE;
-}
-.navbar-hype-button-black:hover {
-  color: #333745;
-  background: white;
-  border-color: white;
-}
-/* Optional class to fix the navbar on top */
+// .navbar-hype-black {
+//   background: #040F0F;
+//   border-bottom-color: #EEEEEE;
+//   margin-bottom: 50px;
+// }
 .navbar-hype-fixed {
   position: fixed;
   left: 0px;
@@ -85,6 +67,25 @@
   color: #333745;
   background: white;
   border-color: #333745;
+}
+.navbar-hype-button-black {
+  margin-left: 10px;
+  padding: 0 20px;
+  border-radius: 20em;
+  line-height: 40px;
+  background: #040F0F;
+  color: #EEEEEE;
+  font-size: 12px;
+  letter-spacing: 3px;
+  border: 2px solid #EEEEEE;
+}
+.navbar-hype-button-black:hover {
+  color: #040F0F;
+  background: white;
+  border-color: white;
+}
+#locat-search-btn {
+  z-index: 10;
 }
 
 /* Navbar search form */
