--- a/app/views/shared/_navbar_black.html.erb
+++ b/app/views/shared/_navbar_black.html.erb
@@ -65,13 +65,6 @@
 
   <!-- Dropdown list appearing on mobile only -->
   <div class="navbar-hype-item hidden-md hidden-lg">
-    <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-hype-dropdown-menu">
-        <li><a href="#">Search</a></li>
-        <li><a href="#">Club info</a></li>
-        <li><a href="#">Profile</a></li>
-      </ul>
-    </div>
+      <i class="fa fa-search dropdown-toggle" data-toggle="dropdown"></i>
   </div>
 </div>
