--- a/app/assets/stylesheets/components/_mobile_nav.scss
+++ b/app/assets/stylesheets/components/_mobile_nav.scss
@@ -19,3 +19,6 @@
   opacity: 0.5;
   font-weight: lighter;
 }
+.mobile-nav a:hover, .mobile-nav a:active, .mobile-nav a:focus {
+  text-decoration: none;
+}
