--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -10,7 +10,7 @@
 <!-- INFO PAGE -->
   <div class="all-the-events">
     <% @events.each_with_index do |event, index| %>
-      <div class="<%= (index == 0) ? "active-event" : "non-active-event"%>" id="displayed-event" data-index="<%= index%>" data-lat="<%= event.latitude%>" data-lng="<%= event.longitude%>">
+      <div class="<%= (index == 0) ? "active-event" : "non-active-event"%> event-wrapper" id="displayed-event" data-index="<%= index%>" data-lat="<%= event.latitude%>" data-lng="<%= event.longitude%>">
 
         <div id="infos-<%= index %>" class="event-infos">
 
