--- a/app/views/shared/_navbar_black.html.erb
+++ b/app/views/shared/_navbar_black.html.erb
@@ -58,13 +58,18 @@
     <% end %>
 
     <!-- Button (call-to-action) -->
-      <input type="text" name="loco" class="navbar-hype-search-input" placeholder="Insert a location">
-        <button class="navbar-hype-button-black btn" id="locat-search-btn">Search</button>
+
+    <input type="text" name="loco" class="search-box" style="color: black;" placeholder="Insert a location">
+    <button class="navbar-hype-item navbar-hype-button btn" id="locat-search-btn">Search</button>
 
   </div>
 
   <!-- Dropdown list appearing on mobile only -->
   <div class="navbar-hype-item hidden-md hidden-lg">
-      <i class="fa fa-search dropdown-toggle" data-toggle="dropdown"></i>
+      <i class="fa fa-search dropdown-toggle" id="search-icon-to-drop" data-toggle="dropdown"></i>
+      <div id="mobile-locat-search-form" class="hidden">
+        <input type="text" name="loco" id="hidden-input" class="navbar-hype-search-input" placeholder="location">
+        <button class="navbar-hype-button-black btn" id="locat-search-btn-dropdown">Search</button>
+      </div>
   </div>
 </div>
