--- a/app/views/shared/_navbar_white.html.erb
+++ b/app/views/shared/_navbar_white.html.erb
@@ -59,19 +59,16 @@
     <!-- Button (call-to-action) -->
 
 
-    <input type="text" name="loco" class="search-box" placeholder="Insert a location">
-        <button class="navbar-hype-item navbar-hype-button btn" id="locat-search-btn">Search</button>
+    <input type="text" name="loco" class="search-box" style="color: black;" placeholder="Insert a location">
+    <button class="navbar-hype-item navbar-hype-button btn" id="locat-search-btn">Search</button>
   </div>
 
   <!-- Dropdown list appearing on mobile only -->
   <div class="navbar-hype-item hidden-md hidden-lg">
-    <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-hype-dropdown-menu">
-        <li><a href="#">Search</a></li>
-        <li><a href="#">Club info</a></li>
-        <li><a href="#">Profile</a></li>
-      </ul>
+    <i class="fa fa-search dropdown-toggle" id="search-icon-to-drop" data-toggle="dropdown"></i>
+    <div id="mobile-locat-search-form" class="hidden">
+      <input type="text" name="loco" id="hidden-input" class="navbar-hype-search-input" placeholder="location">
+      <button class="navbar-hype-button-black btn" id="locat-search-btn-dropdown">Search</button>
     </div>
   </div>
 </div>
