--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -1,49 +1,80 @@
+// GENERAL
 .event-infos, .event-lineup, .event-map {
   height: calc(100vh - 100px);
   padding-top: 70px;
   background: #333745;
 }
-.event-map {
-  margin-bottom: 100px;
-  p {
-    padding-top: 20px;
-  }
-}
 
-.event-title {
+
+// INFO PAGE
+.club-name {
   color: #F89D33;
   text-align: right;
-  padding: 10px 0;
-  margin-top: 75px;
-}
-.event-photo {
-  width: 98%;
-  height: 200px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
+  margin: -15px 0;
+  padding: 0 10px 0 0;
+  font-weight: lighter;
 }
 .orange-line-top {
   border-top: 2px solid #F89D33;
-  margin: 0 0 25px 0;
+  margin: 0px;
 }
-.green-line-top {
-  border-top: 2px solid #61D095;
-  margin: 25px 0 40px 0;
+.event-photo {
+  background-size: cover;
+  height: 190px;
+  background-position-x: center;
+  background-position-y: top;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 0;
+}
+.event-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  font-weight: lighter;
+  padding: 0 30px;
+  margin-top: 20px;
+  height: 110px;
+}
+.event-details-info {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 30px;
+  height: 90px;
+  h3 {
+    align-content: center;
+    font-size: 20px;
+    margin: 0px;
+  }
+  span {
+    color: #F89D33;
+    font-size: 12px;
+    padding-bottom: 10px;
+  }
+  p {
+    margin: 0;
+  }
+}
+.event-address {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 35px;
+  font-size: 13px;
+  height: 70px;
+  span {
+    color: #F89D33;
+  }
 }
 .green-line {
-  border-top: 2px solid #61D095;
-  margin: 40px 0 30px 0;
+  border-top: 1px solid #61D095;
+  margin: 0px;
 }
-.orange-line-bottom {
-  border-top: 2px solid #F89D33;
-  margin: 40px 0 25px 0;
-}
-.infos p {
-  margin-bottom: 30px;
-  font-weight: lighter;
-}
+
+
+// LINE UP PAGE
 .line-up-list {
   display: flex;
   flex-direction: row;
@@ -83,15 +114,29 @@ em {
   font-weight: lighter;
   font-size: 15px;
 }
+
+
+
+// MAP PAGE
+.event-map {
+  margin-bottom: 100px;
+  p {
+    padding-top: 20px;
+  }
+}
 .map-container {
   // padding-bottom: 40px;
 }
 .non-active-event {
   display: none;
 }
+
+
+
+// PAGE ARROWS
 .sidebar-arrow-left {
   position: absolute;
-  top: 550px;
+  top: 320px;
   left: 10px;
   position: fixed;
   font-size: 18px;
@@ -99,23 +144,27 @@ em {
   color: #EEEEEE;
   list-style-type: none;
 }
-.fa-arrow-right:hover {
-    color: #F89D33;
-    text-decoration: none;
-}
-.fa-arrow-left:hover {
-    color: #F89D33;
-    text-decoration: none;
-}
 .sidebar-arrow-right {
   position: absolute;
-  top: 550px;
+  top: 320px;
   right: 10px;
   position: fixed;
   font-size: 18px;
   color: #EEEEEE;
   font-weight: lighter;
 }
+.fa-arrow-left:hover {
+    color: #F89D33;
+    text-decoration: none;
+}
+.fa-arrow-right:hover {
+    color: #F89D33;
+    text-decoration: none;
+}
+
+
+
+
  // tablet/desktop only
 @media (min-width: 481px) {
   .address-padding {
@@ -127,36 +176,4 @@ em {
   }
 }
 
-
-.event-banner {
-  background-size: cover;
-  height: 190px;
-  background-position-x: center;
-  background-position-y: top;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  .event-banner-content {
-    padding: 60px;
-    text-align: center;
-  }
-  h2 {
-    font-size: 21px;
-    text-transform: uppercase;
-    font-weight: lighter;
-  }
-}
-.event-details-header {
-  display: flex;
-  justify-content: space-between;
-  padding: 30px;
-  font-size: 20px;
-  padding-bottom: 0px;
-}
-.event-address {
-  padding: 30px;
-  span {
-    color: $orange;
-  }
-}
 
