--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,5 +1,6 @@
 // Your footer style
 .footer {
+  background-color: #191B22;
   color: #C6C5B9;
   font-size: 12px;
   font-weight: lighter;
@@ -13,7 +14,7 @@
   // height: 150px;
 }
 .footer-wrapper {
-  background: #040F0F;
+  background: #191B22;
 }
 .footer-left {
   padding: 27px 0 27px 0px;
