--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer bg-black text-center">
+<div class="footer text-center">
   <div class="footer-child hidden-xs">
     <div class="footer-logo">
       <%= link_to root_path, class: "footer-hype-brand" do %>
