--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -2,13 +2,13 @@
     display: inline-block;
     text-align: center;
     line-height: 30px;
-    color: white;
-    background: white;
+    background-color: white;
+    opacity: 0.25px;
     border-radius: 50%;
     position: relative;
     margin: 10px;
     width: 125px;
-    // border: 2px solid #848484;
+    border: 2px solid white;
     padding: 30px;
     transition: background 0.3s ease;
     letter-spacing: 3px;
@@ -21,13 +21,13 @@
     margin: auto;
     font-size: 80px;
 }
-#hype-btn:hover {
-  text-decoration: none;
-  color: white;
-  box-shadow: inset 0 0 10px #000000;
-}
+// #hype-btn:hover {
+//   text-decoration: none;
+//   color: white;
+//   box-shadow: inset 0 0 10px #000000;
 // border-radius: 20em;
 // text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+// }
 .show-cta-btn {
   padding: 10px 20px;
   border-radius: 20em;
@@ -53,3 +53,7 @@
   text-decoration: none;
 }
 
+.main-photo {
+  height: 100px;
+  width: 200px;
+}
