some more changes

--- a/app/assets/stylesheets/components/_mobile_nav.scss
+++ b/app/assets/stylesheets/components/_mobile_nav.scss
@@ -1,5 +1,6 @@
 .mobile-navs {
-  position: fixed;
+
+  border-top: 1px solid #61D095;position: fixed;
   bottom: 0;
   width: 100%;
   display: flex;
